fix home page images too tall on mobile

--- a/public/css/_home.scss
+++ b/public/css/_home.scss
@@ -34,12 +34,16 @@
       }
 
       .money {
+        height: 200px;
         @media (min-width: $screen-md-min) {
+          height: 100%;
           margin-left: -360px;
         }
       }
       .timecard {
+        height: 200px;
         @media (min-width: $screen-md-min) {
+          height: 100%;
           margin-right: -360px;
         }
       }
